[project]
name = "http-sf"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Parse and serialise HTTP Structured Fields"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "typing_extensions"
]

[project.optional-dependencies]
dev = ["mypy", "black", "isort", "pylint", "pytest", "pytest-md", "validate-pyproject", "build"]

[project.urls]
homepage = "https://github.com/mnot/http-sf"

[project.scripts]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "http_sf.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["http_sf", "http_sf.*"]
exclude = ["build*", "dist*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
http_sf = ["py.typed"]

